--- a/TrackerWatchServer/TrackerWatchServer.csproj
+++ b/TrackerWatchServer/TrackerWatchServer.csproj
@@ -48,7 +48,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class\Command.cs" />
+    <Compile Include="Controller\AlarmController.cs" />
     <Compile Include="Controller\CommandController.cs" />
+    <Compile Include="Controller\DeviceController.cs" />
+    <Compile Include="Form\frmAlarm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form\frmAlarm.Designer.cs">
+      <DependentUpon>frmAlarm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Model\Alarm.cs" />
     <Compile Include="Class\Database.cs" />
     <Compile Include="Controller\UserController.cs" />
@@ -64,14 +72,17 @@
     <Compile Include="AppSupport\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Class\TrackerCommand.cs" />
-    <Compile Include="Control\UserControl1.cs">
+    <Compile Include="UserControl\UserControl1.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Control\UserControl1.Designer.cs">
+    <Compile Include="UserControl\UserControl1.Designer.cs">
       <DependentUpon>UserControl1.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Form\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form\frmAlarm.resx">
+      <DependentUpon>frmAlarm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -82,7 +93,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Control\UserControl1.resx">
+    <EmbeddedResource Include="UserControl\UserControl1.resx">
       <DependentUpon>UserControl1.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
