--- a/TrackerWatchServer/TrackerWatchServer.csproj
+++ b/TrackerWatchServer/TrackerWatchServer.csproj
@@ -72,6 +72,12 @@
     <Compile Include="Controller\UserController.cs" />
     <Compile Include="Model\Device.cs" />
     <Compile Include="Model\User.cs" />
+    <Compile Include="View\frmDevice.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\frmDevice.Designer.cs">
+      <DependentUpon>frmDevice.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\frmServer.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -146,6 +152,11 @@
     <Content Include="AppSupport\devices.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Resources\bold_icon.png" />
+    <Content Include="Resources\center_align_text_icon.png" />
+    <Content Include="Resources\elenco_puntato_icon.png" />
+    <Content Include="Resources\italic_icon.png" />
+    <Content Include="Resources\Left_Align_Text_icon.png" />
     <Content Include="Support\Images\pushpin_blue.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
