frm UserDetails save and load formatted test

--- a/TrackerWatchServer/TrackerWatchServer.csproj
+++ b/TrackerWatchServer/TrackerWatchServer.csproj
@@ -106,13 +106,14 @@
     </Compile>
     <Compile Include="View\frmStorico.Designer.cs">
       <DependentUpon>frmStorico.cs</DependentUpon>
-	 </Compile>
+    </Compile>
     <Compile Include="View\frmUserDetails.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="View\frmUserDetails.Designer.cs">
       <DependentUpon>frmUserDetails.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\TextRange.cs" />
     <EmbeddedResource Include="UserControl\SearchControl.resx">
       <DependentUpon>SearchControl.cs</DependentUpon>
     </EmbeddedResource>
@@ -140,7 +141,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View\frmStorico.resx">
       <DependentUpon>frmStorico.cs</DependentUpon>
-	 </EmbeddedResource>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\frmUserDetails.resx">
       <DependentUpon>frmUserDetails.cs</DependentUpon>
     </EmbeddedResource>
